--- a/trunk/firmware/Makefile.am
+++ b/trunk/firmware/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
 
 firmwaredir = $(pkgdatadir)/firmware
-dist_firmware_DATA = FX2Firmware.hex VideoRecorder.hex \
-	qmmapp.seve1-eb-16mb.bin cap.qmmapp.seve1-eb-16mb.bin
+dist_firmware_DATA = FX2Firmware.hex hd.FX2Firmware.hex VideoRecorder.hex \
+	qmmapp.seve1-eb-16mb.bin cap.qmmapp.seve1-eb-16mb.bin qmmapp.mg3500-2ddr2_264MHz_from48_128MB-codec.bin
