--- a/trunk/sample/Makefile.am
+++ b/trunk/sample/Makefile.am
@@ -1,6 +1,6 @@
 
-EXTRA_PROGRAMS = crusherRTMP
-bin_PROGRAMS = crusher264 $(CRUSHER_RTMP)
+EXTRA_PROGRAMS = crusherRTMP crusherRTP
+bin_PROGRAMS = crusher264 $(CRUSHER_RTMP) $(CRUSHER_RTP)
 
 crusher264_SOURCES = crusherenc.c logging.c qbox.c wav.c adts.c imgConverter.c
 crusher264_LDADD = $(top_builddir)/src/libcrusher264.la
@@ -11,6 +11,10 @@ crusherRTMP_SOURCES = crusherRTMP.c flvpkt.c logging.c qbox.c
 crusherRTMP_LDADD = $(top_builddir)/src/libcrusher264.la @RTMP_LIBS@
 crusherRTMP_CFLAGS = -I$(top_srcdir)/include @RTMP_CFLAGS@
 
+crusherRTP_SOURCES = crusherRTP.c logging.c qbox.c rtppkt.c
+crusherRTP_LDADD = $(top_builddir)/src/libcrusher264.la
+crusherRTP_CFLAGS = -I$(top_srcdir)/include
+
 
 noinst_HEADERS = \
 	adts.h wav.h \
@@ -18,4 +22,5 @@ noinst_HEADERS = \
 	logging.h \
 	imgConverter.h \
 	bswap.h \
-	flvpkt.h
+	flvpkt.h \
+	rtppkt.h
